@@ -5,6 +5,7 @@ Date: ????
     - [Editor Extensions] The testing lab force will be ignored in favor of the player's "actual" force
   Bugfixes:
     - Fixed that rejected confirm with E was still closing the edit task GUI
+    - Fixed the mod not accounting for forces created after the start of a game
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.3
 Date: 2021-12-04
